--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -54,20 +54,27 @@
     .weeks {
       background-color: $neutral_dark_blue_color;
       padding: 2rem 3rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       overflow: hidden;
 
-      ul {
-        list-style-type: none;
+      button {
+        border: none;
+        background: transparent;
+        font-family: inherit;
+        font-size: 1.8rem;
+        color: $neutral_pale_blue_color;
+        cursor: pointer;
+        margin: 1rem 0rem;
 
-        li {
-          margin: 1rem 0;
-          color: $neutral_pale_blue_color;
-          cursor: pointer;
+        &:focus {
+          outline: none;
         }
+      }
 
-        li.active {
-          color: $white_color;
-        }
+      .active {
+        color: $white_color;
       }
     }
   }
@@ -83,6 +90,10 @@
       background: url("../images/icon-work.svg") $primary_light_red_work_color
         no-repeat top right;
       background-position-x: 90%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       height: 10vh;
     }
 
@@ -126,7 +137,7 @@
           color: $white_color;
         }
 
-        span {
+        small {
           display: inline-block;
           color: $neutral_pale_blue_color;
           font-size: small;
